<resources>
    <string name="app_name">My Portfolio</string>

    <!-- Resources that do not require translation -->
    <string name="navigation_drawer_header_title" translatable="false">Andromesh</string>

    <!-- Translatable resources -->
    <string name="filter" translation_description="Common Filter">Filter</string>
    <string name="grid" translation_description="Common Filter">Switch between grid and list</string>
    <string name="legothemes_title">Browse Themes</string>
    <string name="legosets_title">Browse All Sets</string>
    <string name="legoset_details_title">Set details</string>
    <string name="navigation_drawer_header_content_description">Navigation drawer header logo</string>
    <string name="santa_claus_quote">Santa Claus will consider this request</string>
    <string name="menu_item_share" translation_description="The label for the Share menu item">Share</string>
    <string name="number_of_parts">Number of parts: %d</string>
    <string name="year">Year: %d</string>
    <string name="share_lego_set">Check out %s Lego set : %s</string>

    <!-- Accessibility -->
    <string name="a11y_legoset_item_image">Picture of Lego Set</string>
    <string name="movies_navigation_item">Movies</string>
    <string name="movies_list">Searched Movies</string>
    <string name="movie_details">Movie Details</string>
    <string name="password_hint">Type your password</string>
    <string name="username_hint">Type your username</string>
    <string name="login">Login</string>
    <string name="password_label">Password</string>
    <string name="username_label">Username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_resister">New User? Resister</string>
    <string name="register">Register</string>
    <string name="confirm_your_password">Confirm Password</string>

    <string name="andro_fit">AndroFIT</string>
    <string name="andro_player">Andro PLAYER</string>
    <string name="dummy_fragment_3">Dummy 3</string>
    <string name="dummy_fragment_4">Dummy 4</string>
    <string name="dummy_fragment_5">Dummy 5</string>
    <string name="action_logout">Logout</string>
    <string name="coming_soon">Coming soon..!!</string>
    <string name="action_media">Media</string>


</resources>
