<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/moviesFragment"
        android:icon="@drawable/app_logo1"
        android:title="@string/movies_navigation_item" />

    <item
        android:id="@+id/androFITFragment"
        android:icon="@drawable/app_logo1"
        android:title="@string/andro_fit" />

    <item
        android:id="@+id/androPlayerFragment"
        android:icon="@drawable/app_logo1"
        android:title="@string/andro_player" />

    <item
        android:id="@+id/dummyFragmentThree"
        android:icon="@drawable/app_logo1"
        android:title="@string/dummy_fragment_3" />

    <item
        android:id="@+id/dummyFragmentFour"
        android:icon="@drawable/app_logo1"
        android:title="@string/dummy_fragment_4" />

</menu>